# Franklin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SETUP.md
assets/: Tesseract.fdr
include/: fdr_parser.h  geometry.h  gpu_resources.h  renderer.h  shaders.h
src/: fdr_parser.cpp  geometry.cpp  gpu_resources.cpp  main.cpp  renderer.cpp  shaders.cpp
